# opencv_test

./: .ycm_extra_conf.py  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
